--- a/index.css
+++ b/index.css
@@ -36,7 +36,7 @@ main {
 }
 
 .character-card {
-    height:25rem;
+    height:20rem;
     margin-top: .5rem;
     width:100%;
     max-width: 230px;
@@ -76,9 +76,9 @@ main {
 }
 
 .avatar {
-    width: 15vh;
+    width: 40%;
     border: 2px solid #000721;
-    max-width:100%;
+    max-width:50%;
     opacity: 0.8;
     border-radius: 10px;
     background-color: rgba(0, 7, 33, 0.8);
