--- a/index.css
+++ b/index.css
@@ -184,8 +184,8 @@ button {
     background-color: #fcc02a;
     border: 2px solid #963404;
     outline: none;
-    padding-left:5vw;
-    padding-right:5vw;
+    padding-left:2vw;
+    padding-right:2vw;
     text-align: center;
     text-decoration: none;
     display: inline-block;
@@ -193,7 +193,7 @@ button {
     border-radius: 6px;
     cursor: pointer;
     color:#963404;
-    height:9vh;
+    height:5vh;
     box-shadow: 0px 6px 10px -4px rgba(0,0,0,0.4);
 }
 
@@ -231,5 +231,5 @@ justify-content: center;
 align-items: center;
 color: red;
 font-weight: bolder;
-font-size: 50px;
+font-size: 1.5rem
 }
