--- a/index.css
+++ b/index.css
@@ -233,3 +233,15 @@ color: red;
 font-weight: bolder;
 font-size: 1.5rem
 }
+
+.fa-down-long{
+
+
+     position: absolute;
+    opacity: 0;
+     margin-top: -45px;
+     margin-left: 42px;
+     font-size: 40px;
+    color: #ff0000;
+    z-index: 200;
+}
