--- a/index.css
+++ b/index.css
@@ -236,12 +236,11 @@ font-size: 1.5rem
 
 .fa-down-long{
 
-
-     position: absolute;
-    opacity: 0;
-     margin-top: -45px;
-     margin-left: 42px;
-     font-size: 40px;
+ justify-self: center;
+ align-self: center;
+ margin-right: 10px;
+    opacity: 1;
+     font-size: 30px;
     color: #ff0000;
     z-index: 200;
 }
